update login page

--- a/public/assets/css/pages/login/login-4.css
+++ b/public/assets/css/pages/login/login-4.css
@@ -106,7 +106,7 @@
     width: 700px; }
 
 .login.login-4 .login-aside {
-  background: linear-gradient(147.04deg, #CA7B70 0.74%, #5A2119 99.61%);
+  background: linear-gradient(140.74deg, rgba(136, 136, 196, 0) 0%, rgba(153, 1, 187, 0.288) 80.33%, rgba(154, 1, 187, 0.3) 0.01%);
   width: 700px; }
   .login.login-4 .login-aside .login-conteiner {
     height: 100%; }
