--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -247,3 +247,115 @@ ul.ui-autocomplete {
     align-items: center;
     align-content: center;
 }
+
+.class-owned__wrapper {
+    border-radius: 12px;
+    background-color: white;
+    color: #ffffff;
+    box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.01), 0px 16px 24px rgba(0, 0, 0, 0.01), 0px 4px 8px rgba(0, 0, 0, 0.01), 0px 0px 1px rgba(0, 0, 0, 0.01);
+}
+
+.class-owned__wrapper .overlay {
+    width: 100%;
+    height: 120px;
+    position: absolute;
+    top: -120px;
+    left: 0;
+    background: #ffffff;
+    z-index: 1;
+}
+
+.class-owned__wrapper .see-all {
+    position: absolute;
+    top: 80px;
+    right: -12px;
+    background: #7F16A7;
+    z-index: 2;
+    padding: 10px 20px;
+    font-size: 14px;
+    font-weight: 500;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+@media (min-width: 992px) {
+    .class-owned__wrapper .see-all {
+        top: 105px;
+    }
+ }
+
+.class-owned__wrapper .class-owned-selected {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    position: relative;
+    width: 100%;
+    height: 110px;
+    object-fit: cover;
+    border-radius: 12px;
+    overflow: hidden;
+    cursor: pointer;
+    z-index: 2;
+}
+
+
+.class-owned__wrapper .class-owned {
+    position: absolute;
+    width: 100%;
+    height: auto;
+    background: #ffffff;
+    z-index: 1;
+    border-radius: 0 0 12px 12px;
+    overflow: hidden;
+    background: white;
+    padding: 16px;
+    display: none;
+
+
+}
+
+.class-owned__wrapper .class-owned-overlay {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    background-color:  #1A1A1A80;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 110px;
+    z-index: 1;
+}
+
+.class-owned__wrapper .class-owned-selected-overlay {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    background-color:  #1A1A1A80;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 110px;
+    z-index: 1;
+}
+
+.class-owned__wrapper .class-owned .class-owned__item {
+    position: relative;
+    width: 100%;
+    height: 110px;
+    object-fit: cover;
+    border-radius: 12px;
+    overflow: hidden;
+    margin-top: 14px;
+    cursor: pointer;
+}
